Add point calculation to the move generator